--- a/docs/presentations/style.css
+++ b/docs/presentations/style.css
@@ -1,39 +1,75 @@
 @import url(https://fonts.googleapis.com/css?family=Oxygen);
+@import url(https://fonts.googleapis.com/css?family=Consolas);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif);
 @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
 @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
 body {
-    font-family: 'Oxygen', 'PT Sans';
+    font-family: 'Oxygen', 'PT Sans', Serif;
 }
 h1, h2, h3 {
     font-weight: bold;
-    margin-bottom: 0;
 }
-.remark-slide-content h1 { font-size: 3em; }
-.remark-slide-content h2 { font-size: 2em; }
-.remark-slide-content h3 { font-size: 1.6em; }
+h1 {
+    font-size: 3em;
+    color: #ff9300;
+}
+h2 { font-size: 2em; }
+
+.title h1, h2 {
+    margin-bottom: 0px;
+    margin-top: 0px;
+    text-align: center;
+}
+
+.title p {
+    margin-top: 50px;
+    text-align: center;
+}
+
+h3 {
+    font-size: 1.8em;
+    position: absolute;
+    top: .5em;
+}
+
 .footnote {
     position: absolute;
     bottom: 3em;
 }
-li p { line-height: 1.25em; }
-.red { color: #fa0000; }
-.large { font-size: 2em; }
+
+i, em {
+    color: #ff9300;
+}
+
+.large {
+    font-size: 1.6em;
+}
+
+.photo-credit {
+    font-weight: bolder;
+    font-size: 2em;
+    line-height: 1em;
+    text-shadow: 0 0 20px #333;
+}
+
+.smaller {
+    font-size: .8em;
+}
+
 a, a > code {
-    color: rgb(249, 38, 114);
+    color: #ff9300;
     text-decoration: none;
 }
-code {
-    background: #e7e8e2;
-    border-radius: 5px;
-}
 .remark-code, .remark-inline-code {
-    font-family: 'Ubuntu Mono';
+    font-family: 'Consolas';
+    color: #ff9300;
+    font-size: 1.1em;
 }
-.remark-code-line-highlighted     {
-    background-color: #373832;
+.slightly-smaller {
+    font-size: .9em;
 }
+
 .pull-left {
     float: left;
     width: 47%;
@@ -46,20 +82,13 @@ code {
     clear: both;
 }
 #slideshow .slide .content code {
-    font-size: 0.8em;
 }
 #slideshow .slide .content pre code {
-    font-size: 0.9em;
-    padding: 15px;
 }
 .inverse {
     background: #000;
+    background-repeat: no-repeat;
     color: #ffffff;
-    text-shadow: 0 0 20px #333;
-}
-.inverse h1, .inverse h2 {
-    color: #f3f3f3;
-    line-height: 0.8em;
 }
 
 .inverse strong {
@@ -116,22 +145,3 @@ code {
     float: right;
     padding-top: 1em;
 }
-
-/*First slide h1 orange, h2 white*/
-.special h1 {
-    color: #ff8800;
-}
-
-.special p {
-    color: #cbcbcb;
-}
-
-.special {
-    color: #ff8800;
-}
-
-/* Emphasis 2 */
-.special2 {
-    color: #00f900;
-}
-
