Improvements to workflow presentation.

--- a/docs/presentations/style.css
+++ b/docs/presentations/style.css
@@ -99,6 +99,10 @@ a, a > code {
     color: #ffffff;
 }
 
+hr {
+    display: none;
+}
+
 .white {
     background-color: #fff;
     background-repeat: no-repeat;
