fix rendering of subworkflow steps for workflow testing report

--- a/planemo/reports/macros.tmpl
+++ b/planemo/reports/macros.tmpl
@@ -14,7 +14,7 @@
           </details>
 {%      elif step_data.subworkflow%}
 
-{{      render_steps(step_data.subworkflow.values(), display_job_attributes, "Subworkflow Steps")|indent(5, first=True) }}
+{{      render_steps(step_data.subworkflow.steps.values(), display_job_attributes, "Subworkflow Steps")|indent(5, first=True) }}
 
 {%      endif %}
 {%    endfor %}
