--- a/planemo/reports/macros.tmpl
+++ b/planemo/reports/macros.tmpl
@@ -2,7 +2,7 @@
    * <details><summary>{{summary_label}}</summary>
 {%    for step_data in steps | sort(attribute='order_index') %}
 
-     - **Step {{step_data.order_index + 1}}: {{step_data.workflow_step_label or (step_data.jobs[0].tool_id if step_data.jobs[0] else 'Unlabelled step')|replace("_", "\_")}}**:
+     - **Step {{step_data.order_index + 1}}: {{step_data.workflow_step_label or 'Unlabelled step'}}{% if step_data.jobs and step_data.jobs[0] and step_data.jobs[0].tool_id %} ({{step_data.jobs[0].tool_id|replace("_", "\_")}}){% endif %}**:
 
         * step_state: {{step_data.state}}
 
@@ -28,6 +28,20 @@
           - **Job {{loop.index}}:**
 
             * Job state is {{ job.state }}
+{%          set ns = namespace(container_id=None) %}
+{%          for metric in job.get('job_metrics', []) %}
+{%            if metric.get('name') == 'container_id' %}
+{%              set ns.container_id = metric.get('value') %}
+{%            endif %}
+{%          endfor %}
+{%          if ns.container_id %}
+
+            **Container:**
+
+             * ```console
+               {{ ns.container_id|indent(width=15) }}
+               ```
+{%          endif %}
 
 {%          for key, description in display_job_attributes.items() %}
 {%            if job[key] not in ("", None) %}
