Fix error in reports macro file
when testing against public instances I got

```
Traceback (most recent call last):
  File "/tmp/venv/bin/planemo", line 7, in <module>
    sys.exit(planemo())
             ^^^^^^^^^
  File "/tmp/venv/lib/python3.12/site-packages/click/core.py", line 1485, in __call__
    return self.main(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/venv/lib/python3.12/site-packages/click/core.py", line 1406, in main
    rv = self.invoke(ctx)
         ^^^^^^^^^^^^^^^^
  File "/tmp/venv/lib/python3.12/site-packages/click/core.py", line 1873, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/venv/lib/python3.12/site-packages/click/core.py", line 1269, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/venv/lib/python3.12/site-packages/click/core.py", line 824, in invoke
    return callback(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/venv/lib/python3.12/site-packages/click/decorators.py", line 93, in new_func
    return ctx.invoke(f, obj, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/venv/lib/python3.12/site-packages/click/core.py", line 824, in invoke
    return callback(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/venv/lib/python3.12/site-packages/planemo/cli.py", line 146, in handle_blended_options
    return f(*args, **kwds)
           ^^^^^^^^^^^^^^^^
  File "/tmp/venv/lib/python3.12/site-packages/planemo/commands/cmd_test.py", line 76, in cli
    return_value = test_runnables(ctx, runnables, original_paths=uris, **kwds)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/venv/lib/python3.12/site-packages/planemo/engine/test.py", line 15, in test_runnables
    return handle_reports_and_summary(ctx, test_data.structured_data, kwds=kwds)
           ^^^

--- a/planemo/reports/macros.tmpl
+++ b/planemo/reports/macros.tmpl
@@ -29,7 +29,8 @@
 
             * Job state is {{ job.state }}
 {%          set ns = namespace(container_id=None) %}
-{%          for metric in job.get('job_metrics', []) %}
+{%          set job_metrics = job.get('job_metrics') or [] %}
+{%          for metric in job_metrics %}
 {%            if metric.get('name') == 'container_id' %}
 {%              set ns.container_id = metric.get('value') %}
 {%            endif %}
